Text and Formatting tweaks

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
           <div class="meta">
             <h3>8+ smaller games</h3>
-            <p>Over the years I made smaller games for game jams and experimenting. Generally smaller in scope, some are still available to see on my <a href="https://justindpnt.itch.io/" target="_blank" rel="noopener noreferrer">itch.io page</a>.</p>
+            <p>Over the years I have made smaller games for game jams and experimenting. Generally smaller in scope, some are still available to see on my <a href="https://justindpnt.itch.io/" target="_blank" rel="noopener noreferrer">itch.io page</a>.</p>
             <div class="chips">
               <span class="chip">Unity</span>
               <span class="chip">C#</span>
@@ -239,7 +239,7 @@
 
         <article class="card project">
           <div class="media">
-            <img src="assets/media-pics/ARInsider-Logo.webp" alt="AR Insider logo">
+            <img src="assets/media-pics/ARInsider-Logo.jpg" alt="AR Insider logo">
           </div>
           <div class="meta">
             <h3>Published XR Strategy Commentary Article</h3>
