--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Portfolio</title>
+  <link rel="icon" type="image/png" href="assets/icons/website-logo.png?v=2" />
+  <link rel="apple-touch-icon" href="assets/icons/website-logo.png?v=2" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
