--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Portfolio</title>
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.justindpnt.com/" />
+  <meta property="og:title" content="Justin DuPont - Interactive Experience Developer" />
+  <meta property="og:description" content="I design, build, and share new kinds of interactive experiences." />
+  <meta property="og:image" content="https://www.justindpnt.com/assets/stills/HeroPhoto.jpg" />
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://www.justindpnt.com/" />
+  <meta property="twitter:title" content="Justin DuPont - Interactive Experience Developer" />
+  <meta property="twitter:description" content="I design, build, and share new kinds of interactive experiences." />
+  <meta property="twitter:image" content="https://www.justindpnt.com/assets/stills/HeroPhoto.jpg" />
+  
   <link rel="icon" type="image/png" href="assets/icons/website-logo.png?v=2" />
   <link rel="apple-touch-icon" href="assets/icons/website-logo.png?v=2" />
   <link rel="stylesheet" href="styles.css" />
