Adjusted Open Graph/Twitter Assets

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.justindpnt.com/" />
-  <meta property="og:title" content="Justin DuPont - Portfolio" />
+  <meta property="og:title" content="Justin DuPont's Work" />
   <meta property="og:description" content="I design, build, and share new kinds of interactive experiences." />
-  <meta property="og:image" content="https://www.justindpnt.com/assets/stills/Ion-Talk-Edited.jpg" />
+  <meta property="og:image" content="https://www.justindpnt.com/assets/stills/Ion-Talk-Sized.jpg" />
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://www.justindpnt.com/" />
-  <meta property="twitter:title" content="Justin DuPont - Portfolio" />
+  <meta property="twitter:title" content="Justin DuPont's Work" />
   <meta property="twitter:description" content="I design, build, and share new kinds of interactive experiences." />
-  <meta property="twitter:image" content="https://www.justindpnt.com/assets/stills/Ion-Talk-Edited.jpg" />
+  <meta property="twitter:image" content="https://www.justindpnt.com/assets/stills/Ion-Talk-Sized.jpg" />
   
   <link rel="icon" type="image/png" href="assets/icons/website-logo.png?v=2" />
   <link rel="apple-touch-icon" href="assets/icons/website-logo.png?v=2" />
