--- a/projects/index.html
+++ b/projects/index.html
@@ -8,6 +8,8 @@
     // Redirect #ARHeadset to /capstone
     if (window.location.hash === '#ARHeadset') {
       window.location.href = '/capstone';
+    } else if (window.location.hash === '#games') {
+      window.location.href = 'https://justindpnt.itch.io/';
     } else {
       // If no hash or different hash, redirect to home
       window.location.href = '/';
