Small grammar fixes

--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
 
           <div class="meta">
             <h3>3D Printed Augmented Reality Outdoor Headsets</h3>
-            <p>My engineering capstone project in school was designing and 3D printing and building custom augmented reality headsets.
-              <br><br>Featuring hand tracking, multiplayer support, and compatibility outdoors, the headsets won 1st place among UT Austin engineering capstone projects in 2019.
+            <p>My engineering capstone project at UT Austin was designing, building, and 3D printing custom augmented reality headsets.
+              <br><br>Featuring hand tracking, multiplayer support, and compatibility outdoors, the headsets won 1st place in the 2019 UT Austin engineering capstone fair.
             <div class="chips">
               <span class="chip">Unity</span>
               <span class="chip">C#</span>
@@ -248,7 +248,7 @@
           <div class="meta">
             <h3>Over 500,000 views on social media!</h3>
             <p>I make content on Youtube and Tiktok. 
-              Most of my content focuses on AR/VR devlogs, and overcoming the various challenges involved.
+              Most of my content focuses on AR/VR devlogs, and overcoming the various challenges involved in development.
             </p>
             <p><br><a href="https://www.tiktok.com/@artradingcards" target="_blank" rel="noopener noreferrer">My TikTok ></a><br><a href="https://www.youtube.com/@justinsdeVRlogs" target="_blank" rel="noopener noreferrer">My YouTube ></a></p><br>
             <div class="chips">
